cmake_minimum_required(VERSION 3.12)

add_library(CAHRR_mock MockChassisSystem.cpp MockChassisSystem.h MockTask.cpp MockTask.h MockDebugSystem.cpp MockDebugSystem.h MockCANSystem.cpp MockCANSystem.h MockRemoteSystem.cpp MockRemoteSystem.h MockIMUSystem.cpp MockIMUSystem.h MockUltrasonicSystem.cpp MockUltrasonicSystem.h)
